feat: Add FastAPI web UI with charts, maps, and cross-dataset queries
- Replace Streamlit with FastAPI + Tailwind CSS + Plotly.js
- Add cross-dataset joins (ZIP and SBL-based)
- Implement data quality pipeline with null handling strategies
- Add geocoding script for crime neighborhood mapping
- Add auto-insights feature via GPT-4
- Support bar charts and neighborhood maps
- Update schema to allow crime queries by neighborhood
- Add render.yaml for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,18 @@ venv/
 
 # Local documents to exclude
 Research_Task_09.docx
+Research_Task_09_Instructions.txt
 ResponseSummary.pdf
-"ResponseSummary (1).pdf"
+ResponseSummary (1).pdf
+week5-6.pdf
+IMPLEMENTATION_LOG.txt
+
+# Data files (too large for git)
+data/
+geocode_cache.json
+
+# Windows artifacts
+nul
 
 # Secrets / env
 .env
