--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-pandas==2.3.3
-numpy==2.4.0
-matplotlib==3.10.8
-seaborn==0.13.2
-nbformat==5.10.4
-jupyter==1.1.1
-ipykernel==7.1.0
-openai>=1.54.0
+# Core
+pandas>=2.0.0
+numpy>=1.24.0
 duckdb>=1.1.0
+openai>=1.54.0
+
+# FastAPI
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+jinja2>=3.1.0
+python-multipart>=0.0.6
+
+# Data visualization (for notebooks)
+matplotlib>=3.7.0
+seaborn>=0.13.0
+plotly>=5.18.0
+
+# Jupyter (optional, for development)
+nbformat>=5.9.0
+jupyter>=1.0.0
+ipykernel>=6.25.0
