feat: Integrate 12 new datasets, redesign UI, add Dockerfile
- Add loaders, schema, heuristics, and prompts for: unfit properties,
  trash pickup, historical properties, assessment roll, cityline requests,
  snow routes, bike suitability, bike infrastructure, parking violations,
  permit requests, tree inventory, and lead testing
- Redesign landing page with dataset grid, transparency section, and
  expanded query examples
- Add SQL validator guardrails for LLM-generated SQL (16 tables)
- Add sum metric support in sql_builder, schema, and app
- Add Dockerfile for Hugging Face Spaces deployment (port 7860)
- Fix operator precedence bug in crime heuristic
- Fix historical properties NR eligible filter values

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ Research_Task_09_Instructions.txt
 ResponseSummary.pdf
 ResponseSummary (1).pdf
 week5-6.pdf
+week7-8.pdf
+week9-10.pdf
+hybrid_architectures.md
 IMPLEMENTATION_LOG.txt
 
 # Data files (too large for git)
