--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,10 @@ matplotlib>=3.7.0
 seaborn>=0.13.0
 plotly>=5.18.0
 
-# Jupyter (optional, for development)
-nbformat>=5.9.0
-jupyter>=1.0.0
-ipykernel>=6.25.0
+# Excel support (lead testing data)
+openpyxl>=3.1.0
+
+# Jupyter (optional, for local development only)
+# nbformat>=5.9.0
+# jupyter>=1.0.0
+# ipykernel>=6.25.0
