feat: Expose new columns, fix schema, add dataset test suite
- Add parking_violations amount as computed column (avg/min/max/sum)
- Add cityline_requests minutes_to_close and report_source
- Add assessment_roll zip group-by and filter
- Add tree_inventory spp_com to allowed distinct columns
- Replace unfit_properties vacant (all null) with department_name, complaint_type_name
- Update lead_testing prompt to include year group-by
- Update all 3 LLM prompt templates with new columns
- Add test_all_datasets.py: 37 tests across all 16 datasets

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ week7-8.pdf
 week9-10.pdf
 hybrid_architectures.md
 IMPLEMENTATION_LOG.txt
-
+plan.md
 # Data files (too large for git)
 data/
 geocode_cache.json
